--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
                 <li>
                   <h3>Gurias da Comp</h3>
-                  <p id="tempo">Junho 2024 - Julho 2024</p>
+                  <p id="tempo">Março 2023 - Julho 2024</p>
                   <p>Atuei na atividade <a href="https://www.linkedin.com/posts/maria-j%C3%BAlia-lorenzoni-b09489230_estou-animada-em-compartilhar-um-pouco-sobre-activity-7191081531572920320-28Mg/?utm_source=share&utm_medium=member_desktop" target="_blank" class="negrito"> Além de Ada</a>, onde fiz a divulgação sobre mulheres históricas na computação, contando um pouco sobre a história delas e como suas contribuições impactaram a área.
 
                   </p>
